# OpenGL-particles

./: .gitmodules  CMakeLists.txt  DefaultFShader.glsl  DefaultVShader.glsl  PhongShader.glsl  PhongVertexShader.glsl  README.md  camera.cpp  camera.h  directionallight.cpp  directionallight.h  geomertyobject.cpp  geomertyobject.h  geometryobject.cpp  geometryobject.h  gldebug.cpp  gldebug.h  light.cpp  light.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  particlesystem.cpp  particlesystem.h  plane.cpp  plane.h  renderableobject.cpp  renderableobject.h  renderwidget.cpp  renderwidget.h  scene.cpp  scene.h  shaders.qrc  testbox.cpp  testbox.h
